--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "knex": "^2.5.1",
     "next": "14.0.1",
-    "pg": "^8.11.3",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5"
