--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.1.12",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "next": "14.0.1",
